[gd_scene load_steps=2 format=3 uid="uid://46h2t80i4xnl"]

[ext_resource type="Script" uid="uid://bionmpjyhqw65" path="res://scenes/ui/pause_screen/pause_screen.gd" id="1_5ya3x"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_5ya3x")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
